--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,11 @@ h2, h3 {
   border-radius: 20px;
   box-shadow: 0 0 10px rgba(0,0,0,0.05);
 }
-
+.button-box {
+    margin-top: 0.5rem;
+    display: flex;
+    gap: 0.5rem;
+}
 /* Form styling */
 form input,
 form textarea {
@@ -88,119 +92,3 @@ button:hover {
     width: 100%;
   }
 }
-
-
-
-
-/* form input,
-form textarea {
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-    font-size: 1rem;
-    margin-left: 1%;
-}
-.disney-container {
-    display: flex;
-    gap: 2rem;
-    padding: 2rem;
-    justify-content: space-between;
-}
-.add-post,
-.disney-details {
-    
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(253, 215, 201);
-    padding: 1 rem;
-    width:100%;
-}
-
-#directory {
-    display: block;
-
-    justify-content: end;
-
-}
-#blog-container-left {
-    width: 30%;
-    padding: 0.5rem;
-    margin: 20px;
-    background-color: rgb(248, 227, 219);
-    border-radius: 20px;
-}
-h2 {
-    display: flex;
-    justify-content: center;
-}
-h3 {
-    justify-content: center;
-    display: flex;
-}
-
-#post-list li {
-    margin-bottom: 20px;
-    list-style: none;
-    border-bottom: 1px solid #ccc;
-    padding: 10px 0;
-    display: flex;
-    gap: 10px;
-    align-items: center;
-}
-#post-list img {
-    max-width: 100px;
-    border-radius: 5px;
-}
-#load-more-button {
-    display: flex;
-    justify-items: center;
-    align-content: center;
-    background-color: rgb(247, 187, 165);
-    color: black;
-    border-radius: 20px;
-    padding: 1.5%;
-    cursor: pointer;
-}
-#new-post-form {
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* align-items: flex-start; */
-    /* margin-left: 0;
-    height: ;
-    margin-left: 1%;
-    padding: 0.5rem;
-    border-radius: 20px;
-    width: 75%;
-    background-color: rgb(253, 215, 201); */
-
-/*}
-/* #content {
-    display: block;
-    margin: 40px;
-    height: 440px;
-    width: 80%;
-} */
-/* #new-post-form-submit-button { 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(247, 187, 165);
-    color:black;
-    border-radius: 20px;
-    padding: 1.5%;
-    cursor: pointer;
-} */
-/* .disney-details {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: center;
-    background-color: rgb(253, 215, 201);
-    padding: 20px;
-    width:75%;
-}
-form .form-actions {
-    display: flex;
-    justify-content: space-between;
-} */ 
